# waf-core-protections

./: README.md  app.py  pyproject.toml
waf_core_protections/: waf_core_protections_stack.py
